<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_name" />

        <EditText
            android:id="@+id/editTextEduName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/education_reg_sub_edu_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_location" />

        <EditText
            android:id="@+id/editTextEduLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/education_reg_sub_edu_location_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_part" />

        <EditText
            android:id="@+id/editTextEduPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/education_reg_sub_edu_part_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_start" />

        <EditText
            android:id="@+id/editTextEduStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:hint="@string/education_reg_sub_edu_start_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_end" />

        <EditText
            android:id="@+id/editTextEduEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:hint="@string/education_reg_sub_edu_end_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_sub_edu_time" />

        <EditText
            android:id="@+id/editTextEduTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/education_reg_sub_edu_time_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_target" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget0"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_0"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_1"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_2"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_3"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_4"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget5"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_5"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget6"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_6"
                    android:textSize="12sp" />

                <kr.co.raonnetworks.cityhall.libs.CheckableButton
                    android:id="@+id/buttonTarget7"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_check_box"
                    android:text="@string/education_reg_target_7"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/education_reg_type" />

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonType0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/education_reg_type_0" />

            <RadioButton
                android:id="@+id/radioButtonType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_reg_type_1" />

            <RadioButton
                android:id="@+id/radioButtonType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_reg_type_2" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_reg_edu_reg" />


</LinearLayout>